--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,5 @@ setuptools<81  # Pin to avoid pkg_resources deprecation warning from invoice2dat
 pytest==7.4.3
 pytest-cov==4.1.0
 pytest-asyncio==0.21.1
+pgvector==0.4.1
+sentence-transformers==5.1.2
