docs(architecture): add comprehensive system diagrams and documentation
- Add ARCHITECTURE.md with Mermaid diagrams for system architecture, invoice processing flow, and semantic search data flow
- Document complete technology stack (FastAPI, PostgreSQL, pgvector, BGE-Large)
- Include API endpoints reference and database schema
- Add deployment considerations for privacy, performance, and scalability

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ Thumbs.db
 # Project documentation (local only)
 SPEC_FINAL.md
 SPEC.md
+IMPLEMENTATION_PLAN.md
 PROFESSIONAL_CODE_REVIEW.md
 CLAUDE.md
 .claude/
+
+# Hugging Face model cache
+.cache/
